--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "plataforma-bots-backend",
   "version": "1.0.0",
-  "description": "Backend para a plataforma de investimento em bots com Firebase e MongoDB.",
+  "description": "Backend para a plataforma de investimento em bots com autenticação JWT e MongoDB.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.0",
+    "firebase": "^9.23.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2"
