--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "plataforma-bots-backend",
+  "name": "investment-platform",
   "version": "1.0.0",
-  "description": "Backend para a plataforma de investimento em bots com autenticação JWT e MongoDB.",
+  "description": "Uma plataforma de investimento com USDT e bots de rendimento.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "investimento",
+    "usdt",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "firebase": "^9.23.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3",
+    "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.13"
   }
 }
